@@ -16,3 +16,15 @@
 
 2025-03-31 Giselle Johnson <gigiischic@gmail.com>
     Link to the SQL database download: https://sqlitebrowser.org/dl/
+
+2025-03-31 Giselle Johnson <gigiischic@gmail.com>
+    added the calendar.py, main.py, to_do.py, and priority.py
+    Added to the main creating the skeleton
+    Worked on adding database through DBbrowser
+    Updated format
+
+2025-03-31 Team
+    Deliberated on design of the GUI
+    Planned for upcoming tasks
+    Assigned tasks for team
+    Planned next meeting Thursday 1900
